修复所以fabric版本